Format code with Prettier

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -20,7 +20,8 @@
           </p>
 
           <p class="muted">
-            You can create and manage your posts, search for items, and request to claim an item after logging in.
+            You can create and manage your posts, search for items, and request
+            to claim an item after logging in.
           </p>
 
           <!-- Enter button -->
