--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <div class="container">
       <div id="nav"></div>
 
-      <div class="card" style="margin-top: 14px;">
+      <div class="card" style="margin-top: 14px">
         <div class="card-body">
           <h1 class="page-title">Login</h1>
           <p class="muted">Login with your username.</p>
@@ -33,7 +33,7 @@
             </div>
           </form>
 
-          <div id="msg" class="alert" style="display: none;"></div>
+          <div id="msg" class="alert" style="display: none"></div>
         </div>
       </div>
     </div>
