--- a/public/lost-my.html
+++ b/public/lost-my.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,17 +10,17 @@
     <div class="container">
       <div id="nav"></div>
 
-      <div class="card" style="margin-top: 14px;">
+      <div class="card" style="margin-top: 14px">
         <div class="card-body">
           <div class="row">
-            <h1 class="page-title" style="margin: 0;">My Lost Items</h1>
+            <h1 class="page-title" style="margin: 0">My Lost Items</h1>
             <div class="spacer"></div>
             <a class="btn btn-primary" href="/lost-new.html">Create New</a>
           </div>
 
-          <div id="msg" class="alert" style="display: none;"></div>
+          <div id="msg" class="alert" style="display: none"></div>
 
-          <div id="list" style="margin-top: 12px;"></div>
+          <div id="list" style="margin-top: 12px"></div>
         </div>
       </div>
     </div>
