--- a/public/register.html
+++ b/public/register.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
     <div class="container">
       <div id="nav"></div>
 
-      <div class="card" style="margin-top: 14px;">
+      <div class="card" style="margin-top: 14px">
         <div class="card-body">
           <h1 class="page-title">Register</h1>
           <p class="muted">Create a new account with a unique username.</p>
@@ -28,11 +28,13 @@
 
             <div class="row">
               <button class="btn btn-primary" type="submit">Register</button>
-              <a class="muted" href="/login.html">Already have an account? Login</a>
+              <a class="muted" href="/login.html"
+                >Already have an account? Login</a
+              >
             </div>
           </form>
 
-          <div id="msg" class="alert" style="display: none;"></div>
+          <div id="msg" class="alert" style="display: none"></div>
         </div>
       </div>
     </div>
