--- a/public/admin.html
+++ b/public/admin.html
@@ -1,4 +1,4 @@
-<!-- <!doctype html>
+<!doctype html>
 <html>
 <head>
   <title>Admin Dashboard</title>
@@ -6,9 +6,9 @@
   <style>
     .item-block {
       border: 1px solid #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      margin-bottom: 12px;
+      border-radius: 6px;
+      padding: 8px;
+      margin-bottom: 10px;
     }
     .item-row {
       display: flex;
@@ -23,59 +23,47 @@
 <body>
 <div class="container">
   <h1>Admin Dashboard</h1>
-
-  <h2>Found Items</h2>
-  <div id="foundList"></div>
-
-  <h2>Lost Items</h2>
   <div id="lostList"></div>
 </div>
 
 <script type="module">
-const foundListDiv = document.getElementById("foundList");
 const lostListDiv = document.getElementById("lostList");
 
-// Load all posts
-async function loadItems() {
+// Load lost items
+async function loadLostItems() {
   const res = await fetch("/api/admin/items");
   const data = await res.json();
+  const lost = data.lost || [];
 
-  renderItems(data.found, foundListDiv, "found");
-  renderItems(data.lost, lostListDiv, "lost");
-}
-
-// Simple render with delete button
-function renderItems(items, container, type) {
-  if (!items.length) {
-    container.innerHTML = `<div>No ${type} items.</div>`;
+  if (!lost.length) {
+    lostListDiv.innerHTML = "<div>No lost items.</div>";
     return;
   }
 
-  container.innerHTML = items.map(it => `
-    <div class="item-block" data-id="${it._id || it.id}">
+  lostListDiv.innerHTML = lost.map(item => `
+    <div class="item-block" data-id="${item._id || item.id}">
       <div class="item-row">
         <div>
-          <strong>${it.title || it.name}</strong> (${it.category || "N/A"}) • ${it.location || "N/A"} • ${it.date || "N/A"}
+          <strong>${item.title || item.name}</strong> • ${item.location || "N/A"} • ${item.date || "N/A"}
         </div>
         <div>
           <button class="btn deleteBtn">Delete</button>
         </div>
       </div>
-      <div>${it.description || ""}</div>
-      ${it.image ? `<div><a href="${it.image}" target="_blank">Image Link</a></div>` : ""}
+      <div>${item.description || ""}</div>
     </div>
   `).join("");
 
-  // attach delete handlers
-  container.querySelectorAll(".deleteBtn").forEach(btn => {
+  // Add delete button functionality
+  lostListDiv.querySelectorAll(".deleteBtn").forEach(btn => {
     btn.addEventListener("click", async e => {
       const id = e.target.closest(".item-block").dataset.id;
-      const ok = await fetch(`/api/${type}-items/${id}`, { method: "DELETE" })
+      const ok = await fetch(`/api/lost-items/${id}`, { method: "DELETE" })
         .then(r => r.ok)
         .catch(() => false);
 
       if (ok) {
-        loadItems(); // reload everything after delete
+        loadLostItems(); // refresh list
       } else {
         alert("Delete failed");
       }
@@ -83,13 +71,13 @@ function renderItems(items, container, type) {
   });
 }
 
-// initial load
-loadItems();
+// Initial load
+loadLostItems();
 </script>
 </body>
-</html> -->
+</html>
 
-<!doctype html>
+<!-- <!doctype html>
 <html>
 <head>
   <title>Admin</title>
@@ -114,4 +102,4 @@ document.getElementById("content").innerHTML = `
 `;
 </script>
 </body>
-</html>
+</html> -->
