--- a/public/found-my.html
+++ b/public/found-my.html
@@ -64,7 +64,7 @@
       // Load My Found Items
       async function loadItems() {
         try {
-          const resp = await fetch("/api/found-my");
+          const resp = await fetch("/api/found-items/mine"); // <-- FIXED URL
           const data = await resp.json();
           if (!resp.ok) {
             playError();
