--- a/public/found-my.html
+++ b/public/found-my.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!-- <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -27,5 +27,125 @@
 
     <script type="module" src="/js/nav.js"></script>
     <script type="module" src="/js/found-my.js"></script>
+  </body>
+</html> -->
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Found Items</title>
+    <link rel="stylesheet" href="/css/base.css" />
+    <style>
+      #foundSearch {
+        width: 100%;
+        padding: 6px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        margin-top: 12px;
+        margin-bottom: 12px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <div id="nav"></div>
+
+      <div class="card" style="margin-top: 14px">
+        <div class="card-body">
+          <div class="row">
+            <h1 class="page-title" style="margin: 0">My Found Items</h1>
+            <div class="spacer"></div>
+            <a class="btn btn-primary" href="/found-new.html">Submit New</a>
+          </div>
+
+          <!-- Search Bar -->
+          <input type="text" id="foundSearch" placeholder="Search found items..." />
+
+          <div id="msg" class="alert" style="display: none"></div>
+          <div id="list" style="margin-top: 12px"></div>
+        </div>
+      </div>
+    </div>
+
+    <script type="module">
+      const listDiv = document.getElementById("list");
+      const msg = document.getElementById("msg");
+      const searchInput = document.getElementById("foundSearch");
+
+      let allFoundItems = [];
+
+      function showMsg(text, ok) {
+        msg.style.display = "block";
+        msg.textContent = text;
+        msg.className = ok ? "alert alert-ok" : "alert alert-err";
+      }
+
+      function escapeHtml(s) {
+        return String(s)
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;")
+          .replaceAll("'", "&#039;");
+      }
+
+      // Load My Found Items
+      async function loadItems() {
+        try {
+          const resp = await fetch("/api/found-items/mine"); // <-- correct route
+          const data = await resp.json();
+          if (!resp.ok) {
+            showMsg(data.error || "Failed to load items", false);
+            listDiv.innerHTML = "";
+            return;
+          }
+          allFoundItems = data.items;
+          renderItems(allFoundItems);
+        } catch {
+          showMsg("Network error loading items", false);
+          listDiv.innerHTML = "";
+        }
+      }
+
+      // Render Items
+      function renderItems(items) {
+        if (!items.length) {
+          listDiv.innerHTML = `<div>No found items yet.</div>`;
+          return;
+        }
+
+        listDiv.innerHTML = items
+          .map(it => `
+            <div class="card" style="margin-bottom:12px;">
+              <div class="card-body">
+                <div style="font-weight:700; font-size:16px;">${escapeHtml(it.title)}</div>
+                <div class="muted" style="margin-top:4px;">
+                  ${escapeHtml(it.category)} • ${escapeHtml(it.location)} • ${escapeHtml(it.date)}
+                </div>
+                <div style="margin-top:6px;"><b>Description:</b> ${escapeHtml(it.description)}</div>
+                ${it.image ? `<img src="${escapeHtml(it.image)}" style="max-width:280px; max-height:180px; border-radius:8px; margin-top:6px;" />` : ""}
+              </div>
+            </div>
+          `)
+          .join("");
+      }
+
+      // Live Search
+      searchInput.addEventListener("input", () => {
+        const term = searchInput.value.toLowerCase();
+        const filtered = allFoundItems.filter(item =>
+          item.title.toLowerCase().includes(term) ||
+          item.description.toLowerCase().includes(term) ||
+          item.location.toLowerCase().includes(term)
+        );
+        renderItems(filtered);
+      });
+
+      loadItems();
+    </script>
+
+    <script type="module" src="/js/nav.js"></script>
   </body>
 </html>
