--- a/public/found-my.html
+++ b/public/found-my.html
@@ -14,25 +14,82 @@
         margin-top: 12px;
         margin-bottom: 12px;
       }
+
+      .filters {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+        margin-bottom: 12px;
+      }
+
+      .filters select,
+      .filters input {
+        padding: 6px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
     </style>
   </head>
+
   <body>
     <div class="container">
       <div id="nav"></div>
 
       <div class="card" style="margin-top: 14px">
         <div class="card-body">
+
           <div class="row">
             <h1 class="page-title" style="margin: 0">My Found Items</h1>
             <div class="spacer"></div>
             <a class="btn btn-primary" href="/found-new.html">Submit New</a>
           </div>
 
-          <!-- Search Bar -->
-          <input type="text" id="foundSearch" placeholder="Search found items..." />
+          <!-- SEARCH -->
+          <input
+            type="text"
+            id="foundSearch"
+            placeholder="Search found items..."
+          />
+
+          <!-- FILTERS -->
+          <div class="filters">
+
+            <select id="categoryFilter">
+              <option value="">All Categories</option>
+              <option>Electronics</option>
+              <option>ID / Card</option>
+              <option>Keys</option>
+              <option>Wallet</option>
+              <option>Clothing</option>
+              <option>Books / Notes</option>
+              <option>Accessories / Jewelry</option>
+              <option>Bag / Backpack</option>
+              <option>Water Bottle</option>
+              <option>Other</option>
+            </select>
+
+            <select id="locationFilter">
+              <option value="">All Locations</option>
+              <option>Library</option>
+              <option>Classroom</option>
+              <option>Lecture Hall</option>
+              <option>Cafeteria</option>
+              <option>Gym</option>
+              <option>Dormitory</option>
+              <option>Student Center</option>
+              <option>Parking Lot</option>
+              <option>Bus Stop</option>
+              <option>Outdoor / Courtyard</option>
+              <option>Other</option>
+            </select>
+
+            <input type="date" id="dateFilter" />
+
+          </div>
 
           <div id="msg" class="alert" style="display: none"></div>
           <div id="list" style="margin-top: 12px"></div>
+
         </div>
       </div>
     </div>
@@ -40,7 +97,11 @@
     <script type="module">
       const listDiv = document.getElementById("list");
       const msg = document.getElementById("msg");
+
       const searchInput = document.getElementById("foundSearch");
+      const categoryFilter = document.getElementById("categoryFilter");
+      const locationFilter = document.getElementById("locationFilter");
+      const dateFilter = document.getElementById("dateFilter");
 
       let allFoundItems = [];
 
@@ -59,16 +120,18 @@
           .replaceAll("'", "&#039;");
       }
 
-      // Load My Found Items
+      // LOAD ITEMS
       async function loadItems() {
         try {
-          const resp = await fetch("/api/found-items/mine"); // <-- correct route
+          const resp = await fetch("/api/found-items/mine");
           const data = await resp.json();
+
           if (!resp.ok) {
             showMsg(data.error || "Failed to load items", false);
             listDiv.innerHTML = "";
             return;
           }
+
           allFoundItems = data.items;
           renderItems(allFoundItems);
         } catch {
@@ -77,7 +140,7 @@
         }
       }
 
-      // Render Items
+      // RENDER
       function renderItems(items) {
         if (!items.length) {
           listDiv.innerHTML = `<div>No found items yet.</div>`;
@@ -85,31 +148,76 @@
         }
 
         listDiv.innerHTML = items
-          .map(it => `
+          .map(
+            (it) => `
             <div class="card" style="margin-bottom:12px;">
               <div class="card-body">
-                <div style="font-weight:700; font-size:16px;">${escapeHtml(it.title)}</div>
-                <div class="muted" style="margin-top:4px;">
-                  ${escapeHtml(it.category)} • ${escapeHtml(it.location)} • ${escapeHtml(it.date)}
+                <div style="font-weight:700; font-size:16px;">
+                  ${escapeHtml(it.title)}
                 </div>
-                <div style="margin-top:6px;"><b>Description:</b> ${escapeHtml(it.description)}</div>
-                ${it.image ? `<img src="${escapeHtml(it.image)}" style="max-width:280px; max-height:180px; border-radius:8px; margin-top:6px;" />` : ""}
+
+                <div class="muted" style="margin-top:4px;">
+                  ${escapeHtml(it.category)} • 
+                  ${escapeHtml(it.location)} • 
+                  ${escapeHtml(it.date)}
+                </div>
+
+                <div style="margin-top:6px;">
+                  <b>Description:</b> ${escapeHtml(it.description)}
+                </div>
+
+                ${
+                  it.image
+                    ? `<img src="${escapeHtml(
+                        it.image
+                      )}" style="max-width:280px; max-height:180px; border-radius:8px; margin-top:6px;" />`
+                    : ""
+                }
               </div>
             </div>
-          `)
+          `
+          )
           .join("");
       }
 
-      // Live Search
-      searchInput.addEventListener("input", () => {
+      // 🔥 ONE FILTER FUNCTION (search + filters together)
+      function applyFilters() {
         const term = searchInput.value.toLowerCase();
-        const filtered = allFoundItems.filter(item =>
-          item.title.toLowerCase().includes(term) ||
-          item.description.toLowerCase().includes(term) ||
-          item.location.toLowerCase().includes(term)
-        );
+        const category = categoryFilter.value;
+        const location = locationFilter.value;
+        const date = dateFilter.value;
+
+        const filtered = allFoundItems.filter((item) => {
+          const matchesSearch =
+            item.title.toLowerCase().includes(term) ||
+            item.description.toLowerCase().includes(term) ||
+            item.location.toLowerCase().includes(term);
+
+          const matchesCategory =
+            !category || item.category === category;
+
+          const matchesLocation =
+            !location || item.location === location;
+
+          const matchesDate =
+            !date || item.date === date;
+
+          return (
+            matchesSearch &&
+            matchesCategory &&
+            matchesLocation &&
+            matchesDate
+          );
+        });
+
         renderItems(filtered);
-      });
+      }
+
+      // EVENTS
+      searchInput.addEventListener("input", applyFilters);
+      categoryFilter.addEventListener("change", applyFilters);
+      locationFilter.addEventListener("change", applyFilters);
+      dateFilter.addEventListener("change", applyFilters);
 
       loadItems();
     </script>
