--- a/public/admin.html
+++ b/public/admin.html
@@ -1,67 +1,112 @@
 <!doctype html>
-<html>
-<head>
-  <title>Admin</title>
-  <link rel="stylesheet" href="/css/base.css" />
-</head>
-<body>
-<div class="container">
-  <h1>Admin Dashboard</h1>
-  <div id="content"></div>
-</div>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="/css/base.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div id="nav"></div>
 
-<script type="module">
-const res = await fetch("/api/admin/items");
-const data = await res.json();
+      <div class="card" style="margin-top: 14px">
+        <div class="card-body">
+          <h1 class="page-title">Admin Dashboard</h1>
+          <p class="muted">Review and remove suspicious posts.</p>
+          <div id="msg" class="alert" style="display: none"></div>
 
-const contentDiv = document.getElementById("content");
+          <h2 style="font-size: 16px; font-weight: 700; margin: 16px 0 8px">Lost Items</h2>
+          <div id="lostList"></div>
 
-function escapeHtml(s) {
-  return String(s)
-    .replaceAll("&", "&amp;")
-    .replaceAll("<", "&lt;")
-    .replaceAll(">", "&gt;")
-    .replaceAll('"', "&quot;")
-    .replaceAll("'", "&#039;");
-}
-
-function renderLostItems(items) {
-  if (!items.length) return `<div>No lost items found.</div>`;
-  return items.map(it => `
-    <div style="margin-bottom: 10px; border: 1px solid #ccc; padding: 8px;">
-      <div><b>${escapeHtml(it.title || it.name)}</b></div>
-      <div>${escapeHtml(it.location || "")} • ${escapeHtml(it.date || "")}</div>
-      <button class="deleteBtn" data-id="${it._id || it.id}">Delete</button>
+          <h2 style="font-size: 16px; font-weight: 700; margin: 16px 0 8px">Found Items</h2>
+          <div id="foundList"></div>
+        </div>
+      </div>
     </div>
-  `).join("");
-}
 
-contentDiv.innerHTML = `
-<h2>Lost Items</h2>
-<div id="lostItems">${renderLostItems(data.lost)}</div>
+    <script type="module">
+      const msg = document.getElementById("msg");
+      const lostList = document.getElementById("lostList");
+      const foundList = document.getElementById("foundList");
 
-<h2>Found Items</h2>
-<pre>${JSON.stringify(data.found, null, 2)}</pre>
-`;
+      function showMsg(text, ok) {
+        msg.style.display = "block";
+        msg.textContent = text;
+        msg.className = ok ? "alert alert-ok" : "alert alert-err";
+      }
 
-// Add delete button functionality
-document.querySelectorAll(".deleteBtn").forEach(btn => {
-  btn.addEventListener("click", async (e) => {
-    const id = e.target.dataset.id;
-    if (!confirm("Are you sure you want to delete this item?")) return;
+      function escapeHtml(s) {
+        return String(s)
+          .replaceAll("&", "&amp;")
+          .replaceAll("<", "&lt;")
+          .replaceAll(">", "&gt;")
+          .replaceAll('"', "&quot;")
+          .replaceAll("'", "&#039;");
+      }
 
-    const ok = await fetch(`/api/lost-items/${id}`, { method: "DELETE" })
-      .then(r => r.ok)
-      .catch(() => false);
+      function renderItems(items, container, type) {
+        if (!items || !items.length) {
+          container.innerHTML = `<div class="muted">No ${type} items.</div>`;
+          return;
+        }
 
-    if (ok) {
-      alert("Deleted!");
-      e.target.parentElement.remove(); // remove from DOM
-    } else {
-      alert("Delete failed.");
-    }
-  });
-});
-</script>
-</body>
+        container.innerHTML = items.map(it => {
+          const status = type === "lost"
+            ? (it.resolved ? "RESOLVED" : "OPEN")
+            : (it.claimed ? "CLAIMED" : "UNCLAIMED");
+
+          return `
+            <div class="card" style="margin-bottom: 12px;" data-id="${it._id}" data-type="${type}">
+              <div class="card-body">
+                <div class="row">
+                  <div>
+                    <div style="font-weight: 700; font-size: 16px;">
+                      ${escapeHtml(it.title)}
+                      <span class="muted">(${status})</span>
+                    </div>
+                    <div class="muted" style="margin-top: 4px;">
+                      ${escapeHtml(it.category)} • ${escapeHtml(it.location)} • ${escapeHtml(it.date)}
+                    </div>
+                    <div style="margin-top: 6px;">
+                      <b>Description:</b> ${escapeHtml(it.description)}
+                    </div>
+                  </div>
+                  <div class="spacer"></div>
+                  <button class="btn btn-danger deleteBtn" type="button">Delete</button>
+                </div>
+              </div>
+            </div>`;
+        }).join("");
+
+        container.querySelectorAll(".deleteBtn").forEach(btn => {
+          btn.addEventListener("click", async (e) => {
+            const card = e.target.closest("div[data-id]");
+            const id = card.dataset.id;
+            const itemType = card.dataset.type;
+
+            const resp = await fetch(`/api/admin/${itemType}-items/${id}`, { method: "DELETE" });
+            if (resp.ok) {
+              card.remove();
+            } else {
+              const d = await resp.json();
+              showMsg(d.error || "Delete failed", false);
+            }
+          });
+        });
+      }
+
+      const resp = await fetch("/api/admin/items");
+      const data = await resp.json();
+
+      if (!resp.ok) {
+        showMsg(data.error || "Failed to load — admin only", false);
+      } else {
+        renderItems(data.lost, lostList, "lost");
+        renderItems(data.found, foundList, "found");
+      }
+    </script>
+
+    <script type="module" src="/js/nav.js"></script>
+  </body>
 </html>
