--- a/public/admin.html
+++ b/public/admin.html
@@ -277,6 +277,14 @@
         </a>
       </nav>
       <div class="sidebar-footer">
+        <a href="/index.html" style="
+          display: flex; align-items: center; gap: 8px;
+          font-size: 14px; color: #64748b; text-decoration: none;
+          margin-bottom: 12px;
+        ">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>
+          Back to Site
+        </a>
         <button class="logout-btn" id="logoutBtn">
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
           Logout
