Update index.html changing it to browse items

--- a/public/index.html
+++ b/public/index.html
@@ -186,7 +186,7 @@
 
       <div class="cta-row">
         <a href="/lost-new.html" class="btn-report">Report Lost Item</a>
-        <a href="/found-browse.html" class="btn-browse">Browse Found Items</a>
+        <a href="/found-browse.html" class="btn-browse">Browse Items</a>
       </div>
     </main>
 
