--- a/public/found-my.html
+++ b/public/found-my.html
@@ -7,41 +7,23 @@
     <link rel="stylesheet" href="/css/base.css" />
     <style>
       #foundSearch {
-        width: 100%;
-        padding: 6px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        margin-top: 12px;
-        margin-bottom: 8px;
+        width: 100%; padding: 6px; border: 1px solid #ccc;
+        border-radius: 4px; margin-top: 12px; margin-bottom: 8px;
       }
-      .filter-row {
-        display: flex;
-        gap: 8px;
-        margin-bottom: 12px;
-        flex-wrap: wrap;
-      }
+      .filter-row { display: flex; gap: 8px; margin-bottom: 12px; flex-wrap: wrap; }
       .filter-row select {
-        flex: 1;
-        min-width: 120px;
-        padding: 6px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 14px;
+        flex: 1; min-width: 120px; padding: 6px;
+        border: 1px solid #ccc; border-radius: 4px; font-size: 14px;
       }
       .filter-row button {
-        padding: 6px 12px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        background: white;
-        cursor: pointer;
-        font-size: 14px;
+        padding: 6px 12px; border: 1px solid #ccc; border-radius: 4px;
+        background: white; cursor: pointer; font-size: 14px;
       }
     </style>
   </head>
   <body>
-    <div class="container">
+    <div class="container" role="main">
       <div id="nav"></div>
-
       <div class="card" style="margin-top: 14px">
         <div class="card-body">
           <div class="row">
@@ -49,162 +31,32 @@
             <div class="spacer"></div>
             <a class="btn btn-primary" href="/found-new.html">Submit New</a>
           </div>
-
-          <!-- Search Bar -->
-          <input type="text" id="foundSearch" placeholder="Search found items..." />
-
-          <!-- Filters -->
+          <input type="text" id="foundSearch" placeholder="Search found items..." aria-label="Search found items" />
           <div class="filter-row">
-            <select id="filterCategory">
+            <select id="filterCategory" aria-label="Filter by category">
               <option value="">All Categories</option>
-              <option>Electronics</option>
-              <option>ID / Card</option>
-              <option>Keys</option>
-              <option>Wallet</option>
-              <option>Clothing</option>
-              <option>Books / Notes</option>
-              <option>Accessories / Jewelry</option>
-              <option>Bag / Backpack</option>
-              <option>Water Bottle</option>
-              <option>Other</option>
+              <option>Electronics</option><option>ID / Card</option><option>Keys</option>
+              <option>Wallet</option><option>Clothing</option><option>Books / Notes</option>
+              <option>Accessories / Jewelry</option><option>Bag / Backpack</option>
+              <option>Water Bottle</option><option>Other</option>
             </select>
-
-            <select id="filterLocation">
+            <select id="filterLocation" aria-label="Filter by location">
               <option value="">All Locations</option>
-              <option>Library</option>
-              <option>Classroom</option>
-              <option>Lecture Hall</option>
-              <option>Cafeteria</option>
-              <option>Gym</option>
-              <option>Dormitory</option>
-              <option>Student Center</option>
-              <option>Parking Lot</option>
-              <option>Bus Stop</option>
-              <option>Outdoor / Courtyard</option>
-              <option>Other</option>
+              <option>Library</option><option>Classroom</option><option>Lecture Hall</option>
+              <option>Cafeteria</option><option>Gym</option><option>Dormitory</option>
+              <option>Student Center</option><option>Parking Lot</option>
+              <option>Bus Stop</option><option>Outdoor / Courtyard</option><option>Other</option>
             </select>
-
-            <input type="date" id="filterDate" style="flex:1; min-width:120px; padding:6px; border:1px solid #ccc; border-radius:4px; font-size:14px;" />
-
+            <input type="date" id="filterDate" aria-label="Filter by date"
+              style="flex:1; min-width:120px; padding:6px; border:1px solid #ccc; border-radius:4px; font-size:14px;" />
             <button id="clearFilters">Clear</button>
           </div>
-
           <div id="msg" class="alert" style="display: none"></div>
           <div id="list" style="margin-top: 12px"></div>
         </div>
       </div>
     </div>
-
-    <script type="module">
-      const listDiv = document.getElementById("list");
-      const msg = document.getElementById("msg");
-      const searchInput = document.getElementById("foundSearch");
-      const filterCategory = document.getElementById("filterCategory");
-      const filterLocation = document.getElementById("filterLocation");
-      const filterDate = document.getElementById("filterDate");
-
-      let allFoundItems = [];
-
-      function showMsg(text, ok) {
-        msg.style.display = "block";
-        msg.textContent = text;
-        msg.className = ok ? "alert alert-ok" : "alert alert-err";
-      }
-
-      function escapeHtml(s) {
-        return String(s)
-          .replaceAll("&", "&amp;")
-          .replaceAll("<", "&lt;")
-          .replaceAll(">", "&gt;")
-          .replaceAll('"', "&quot;")
-          .replaceAll("'", "&#039;");
-      }
-
-      async function loadItems() {
-        try {
-          const resp = await fetch("/api/found-items/mine");
-          const data = await resp.json();
-          if (!resp.ok) {
-            showMsg(data.error || "Failed to load items", false);
-            listDiv.innerHTML = "";
-            return;
-          }
-          allFoundItems = data.items;
-          applyFilters();
-        } catch {
-          showMsg("Network error loading items", false);
-          listDiv.innerHTML = "";
-        }
-      }
-
-      function applyFilters() {
-        const term = searchInput.value.toLowerCase();
-        const cat = filterCategory.value;
-        const loc = filterLocation.value;
-        const date = filterDate.value; // yyyy-mm-dd
-
-        const filtered = allFoundItems.filter(item => {
-          const matchSearch = !term ||
-            item.title.toLowerCase().includes(term) ||
-            item.description.toLowerCase().includes(term) ||
-            item.location.toLowerCase().includes(term);
-
-          const matchCat = !cat || item.category === cat;
-          const matchLoc = !loc || item.location === loc;
-
-          // date stored as MM/DD/YYYY — convert to compare
-          let matchDate = true;
-          if (date) {
-            const [y, m, d] = date.split("-");
-            const normalized = `${m}/${d}/${y}`;
-            matchDate = item.date === normalized;
-          }
-
-          return matchSearch && matchCat && matchLoc && matchDate;
-        });
-
-        renderItems(filtered);
-      }
-
-      function renderItems(items) {
-        if (!items.length) {
-          listDiv.innerHTML = `<div>No found items match.</div>`;
-          return;
-        }
-
-        listDiv.innerHTML = items
-          .map(it => `
-            <div class="card" style="margin-bottom:12px;">
-              <div class="card-body">
-                <div style="font-weight:700; font-size:16px;">${escapeHtml(it.title)}</div>
-                <div class="muted" style="margin-top:4px;">
-                  ${escapeHtml(it.category)} • ${escapeHtml(it.location)} • ${escapeHtml(it.date)}
-                </div>
-                <div style="margin-top:6px;"><b>Description:</b> ${escapeHtml(it.description)}</div>
-                ${it.image ? `<img src="${escapeHtml(it.image)}" style="max-width:280px; max-height:180px; border-radius:8px; margin-top:6px;" />` : ""}
-              </div>
-            </div>
-          `)
-          .join("");
-      }
-
-      // All filters trigger same function
-      searchInput.addEventListener("input", applyFilters);
-      filterCategory.addEventListener("change", applyFilters);
-      filterLocation.addEventListener("change", applyFilters);
-      filterDate.addEventListener("change", applyFilters);
-
-      document.getElementById("clearFilters").addEventListener("click", () => {
-        searchInput.value = "";
-        filterCategory.value = "";
-        filterLocation.value = "";
-        filterDate.value = "";
-        applyFilters();
-      });
-
-      loadItems();
-    </script>
-
     <script type="module" src="/js/nav.js"></script>
+    <script type="module" src="/js/found-my.js"></script>
   </body>
 </html>
